force-app/main/default/objects/Survey_Location__c/Survey_Location__c.object-meta.xml
<CustomObject>
    <label>Survey Location</label>
    <nameField>
        <label>Survey Location Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>