force-app/main/default/objects/Survey_Location__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <type>TextArea</type>
</CustomField>