force-app/main/default/objects/Survey_Location__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <inlineHelpText>Floor/Level (Name or #)</inlineHelpText>
    <label>Floor/Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>