force-app/main/default/objects/Survey_Location__c/fields/Floor_Code_Value__c.field-meta.xml
<CustomField>
    <fullName>Floor_Code_Value__c</fullName>
    <formula>IF(ISNUMBER(Floor__c), LPAD(Floor__c, 4, &apos;0&apos;), Floor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Code Value</label>
    <type>Text</type>
</CustomField>