force-app/main/default/objects/Survey_Location__c/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <formula>if( Site_Survey__r.Account__r.ShippingState == &apos;QC&apos; , &apos;fr&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language Code</label>
    <type>Text</type>
</CustomField>