force-app/main/default/objects/Survey_Location__c/fields/Location_SubType__c.field-meta.xml
<CustomField>
    <fullName>Location_SubType__c</fullName>
    <description>If a new value is added or existing values are changed, please update Location SubType field on both Work Order Location object and Work Order Object. Also please execute SLPickListValue.getDependantValues() to update the Configuration__c object</description>
    <label>Location SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unisex</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Accessible</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
            <value>
                <fullName>Co-Ed</fullName>
            </value>
            <value>
                <fullName>Family Room</fullName>
            </value>
            <value>
                <fullName>Staff - Female</fullName>
            </value>
            <value>
                <fullName>Staff - Male</fullName>
            </value>
            <value>
                <fullName>Staff - Unisex</fullName>
            </value>
            <value>
                <fullName>Employee - Female</fullName>
            </value>
            <value>
                <fullName>Employee - Male</fullName>
            </value>
            <value>
                <fullName>Employee - Unisex</fullName>
            </value>
            <value>
                <fullName>Visitor - Female</fullName>
            </value>
            <value>
                <fullName>Visitor - Male</fullName>
            </value>
            <value>
                <fullName>Visitor - Unisex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>