force-app/main/default/objects/Survey_Location__c/fields/Quantity_of_Allocated_Products__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Allocated_Products__c</fullName>
    <label>Quantity of Allocated Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>