force-app/main/default/objects/Survey_Location__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <label>Service Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>