force-app/main/default/objects/Survey_Location__c/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <label>Site Survey</label>
    <referenceTo>Site_Survey__c</referenceTo>
    <relationshipName>Survey_Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>