force-app/main/default/objects/Survey_Location__c/fields/Survey_Location_Count__c.field-meta.xml
<CustomField>
    <fullName>Survey_Location_Count__c</fullName>
    <description>&quot;power of 1&quot; formula: Survey Location</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;power of 1&quot; formula: Survey Location</inlineHelpText>
    <label>Survey Location (Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>