force-app/main/default/objects/Survey_Location__c/fields/UpdateQuantity__c.field-meta.xml
<CustomField>
    <fullName>UpdateQuantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UpdateQuantity</label>
    <type>Checkbox</type>
</CustomField>