force-app/main/default/objects/Survey_Location__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Survey Locations</relationshipLabel>
    <relationshipName>Survey_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>